--- a/Pair/Pair/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Pair/Pair/Views/Storyboards/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TBC-PB-RSD">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TBC-PB-RSD" customClass="PeopleTableView" customModule="Pair" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="88" width="414" height="189"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -46,6 +46,9 @@
                                 <state key="normal" title="Randomize">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="radomizeButtonTapped:" destination="jg0-3Q-qEu" eventType="touchUpInside" id="Bay-7T-DJe"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aZe-5E-yMe"/>
@@ -53,12 +56,22 @@
                         <constraints>
                             <constraint firstItem="6ZL-bT-cfX" firstAttribute="width" secondItem="5kN-f1-3be" secondAttribute="width" multiplier="0.8" id="Cmv-ct-oWm"/>
                             <constraint firstItem="6ZL-bT-cfX" firstAttribute="centerX" secondItem="aZe-5E-yMe" secondAttribute="centerX" id="Plv-9l-zJe"/>
+                            <constraint firstItem="TBC-PB-RSD" firstAttribute="trailing" secondItem="aZe-5E-yMe" secondAttribute="trailing" id="fEV-1X-BZO"/>
                             <constraint firstItem="6ZL-bT-cfX" firstAttribute="top" secondItem="TBC-PB-RSD" secondAttribute="bottom" constant="36" id="iAy-UF-sYd"/>
+                            <constraint firstItem="TBC-PB-RSD" firstAttribute="leading" secondItem="aZe-5E-yMe" secondAttribute="leading" id="te0-fT-3fS"/>
+                            <constraint firstItem="TBC-PB-RSD" firstAttribute="top" secondItem="aZe-5E-yMe" secondAttribute="top" id="yc5-5e-raP"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="WdN-k3-KAa">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="8UC-f8-VAQ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="8UC-f8-VAQ">
+                            <connections>
+                                <action selector="addButtonTapped:" destination="jg0-3Q-qEu" id="VqR-rq-1ke"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="TBC-PB-RSD" id="OgB-qi-ebb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LD3-fd-euu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
